Update DisableModuleValidationMojo.java